# BSI

./: index.py
0a- Desafios de Lógica/: Lobo e Ovelha  Teste Einstein  index.txt  leap frogs  missionarios e canibais
Lista de Exercícios 4 - repetição/: Renan Andrade - 03_repeticao_for.py
Lista de exercicios 3 - condições/: 02-condicoes.py  Renan Andrade - BSI1 - 02-condicoes.py
Lista de exercícios 1 - variáveis e operadores/: 01a-introdução_ao_python-lista1.py  RenanAndrade - BSI1 - 01a-introdução_ao_python-lista1.py  prg_aumentoSalarial.py  prg_celsiusParaFahrenheit.py  prg_decomporNumero.py  prg_diasParaSegundos.py  prg_diasPerdidosPorFumar.py  prg_doisElevadoADez.py  prg_duziasOvos.py  prg_fahrenheitParaCelsius.py  prg_latasTinta.py  prg_mediaFinalAprovadoReprovado.py  prg_metrosMilimetros.py  prg_precoComDesconto.py  prg_salarioLiquido.py  prg_tempoDistancia.py
Lista de exercícios 2 - tipos de dados/: 01b-introdução_ao_python-lista2.py  Renan Andrade - BSI1 - 01b-introdução_ao_python-lista2.py  p7 - Renan Felipe Andrade da Silva.py
Lista de exercícios 3 - condições/: Renan Andrade - 02b_condicoes.py
Matemática/: encontra_raizes.py  encontra_raizes_while_for.py
Prova/: RenanAndrade - avaliacao1-1_bsi1_2022.py  (+2 more)
Python/Poetry/: pyproject.toml
Python/Poetry/Arquivos/: Richard_Dawkins_O_Gene_Egoista.txt  Richard_Dawkins_O_Gene_Egoista_espanhol.txt  Richard_Dawkins_O_Gene_Egoista_frances.txt  index.py  utils.py
Python/Poetry/Embaralha palavra/: index.py  sorteia_palavra.py
Python/Poetry/Urls/: example-env  index.py
(+13 files in other folders)
