[tool.poetry]
name = "PoetryTutorial"
version = "0.1.0"
description = "A virtual enviroment to develop college codes"
authors = ["Renan Andrade <Fel9.renan02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
